TSVPORTAL-1132 - Fixed following issues: Packed Quantity not showing Highlight if qty and packed qty does not match When user dispatches send them /store-dispatch-dashboard

--- a/app/styles/_accordion-table.scss
+++ b/app/styles/_accordion-table.scss
@@ -40,3 +40,7 @@
 .store-instance-review-accordion .panel-title{
   color: #3a87ad;
 }
+
+tr.has-discrepancy td {
+  background-color: #ffdada;
+}
